Fix styling overflow

--- a/client/src/assets/stylesheets/ReviewFirst.css
+++ b/client/src/assets/stylesheets/ReviewFirst.css
@@ -120,11 +120,9 @@
   align-content: flex-start;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%;
-  height: 50vh;
+  height: 100vh;
   list-style: none;
   margin-top: 20px;
-  padding-bottom: 100px;
 }
 
 .first-review-businesses-wrapper ul li {
@@ -132,7 +130,7 @@
   flex-direction: row;
   align-items: center;
   width: 48.5%;
-  height: 45%;
+  height: 25%;
   margin-bottom: 30px;
   border-radius: 4px;
   border: 1px solid var(--light-border-color);
